--- a/perfil/estilos/elegant.css
+++ b/perfil/estilos/elegant.css
@@ -13,7 +13,7 @@ QLineEdit {background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1,
 #gingreso QLineEdit {background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(150, 150, 150, 255), stop:0.084833 rgba(255, 255, 255, 255), stop:1 rgba(250, 250, 250, 255));padding:4px; border-radius:4px;border:1px solid #5D909E}
 #dsbCambio,#dsbPrecio{color:#E6DA1B;background:transparent;border:0px}
 #dsbPrecio{color:#222}
-#lista2,#resumen1,#wIndex,#tbusk{background-color: #DCECCC;selection-background-color:#F6F096; alternate-background-color:#D6E9C3;color:#222;border:1px solid #999; border-top:#3F818D;}
+#lista2,#resumen1,#wIndex,#tbusk{background-color: #FFFFFF; alternate-background-color:#FBFBFB;color:#555;border:1px solid #999; border-top:#3F818D;}
 #lpinfo QLabel{color:#fff;}
 #tabla{border:0px;}
  #resumen{ background:none; }
@@ -88,4 +88,5 @@ color:#fff;	background-color: qlineargradient(spread:reflect, x1:1, y1:1, x2:1, 
  }
 QSplitter QLabel,QSplitter QGroupBox{color:#fff;}
 #frTablas{border:0px}
-
+QToolTip{
+	background:#EDEFDB;color:#555}
