--- a/qt/ui_pyventa.ui
+++ b/qt/ui_pyventa.ui
@@ -14,7 +14,7 @@
    <string>Pyventa - Punto de venta</string>
   </property>
   <property name="windowIcon">
-   <iconset resource="../icons.qrc">
+   <iconset resource="../../2.3/icons.qrc">
     <normaloff>:/modulos/images/pyventa.png</normaloff>:/modulos/images/pyventa.png</iconset>
   </property>
   <property name="unifiedTitleAndToolBarOnMac">
@@ -65,28 +65,10 @@
            <number>0</number>
           </property>
           <item>
-           <layout class="QVBoxLayout" name="verticalLayout_12">
+           <layout class="QHBoxLayout" name="horizontalLayout_2">
             <property name="spacing">
-             <number>3</number>
+             <number>6</number>
             </property>
-            <item>
-             <widget class="QLabel" name="lblModo">
-              <property name="sizePolicy">
-               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
-                <horstretch>0</horstretch>
-                <verstretch>0</verstretch>
-               </sizepolicy>
-              </property>
-              <property name="font">
-               <font>
-                <pointsize>9</pointsize>
-               </font>
-              </property>
-              <property name="text">
-               <string>Ingreso manual</string>
-              </property>
-             </widget>
-            </item>
             <item>
              <widget class="QFrame" name="fLine">
               <property name="sizePolicy">
@@ -166,6 +148,43 @@ p, li { white-space: pre-wrap; }
                  </property>
                 </widget>
                </item>
+              </layout>
+             </widget>
+            </item>
+            <item>
+             <widget class="QFrame" name="fLine_2">
+              <property name="sizePolicy">
+               <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                <horstretch>0</horstretch>
+                <verstretch>0</verstretch>
+               </sizepolicy>
+              </property>
+              <property name="styleSheet">
+               <string notr="true">.QFrame{background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:0, y2:1, stop:0 rgba(150, 150, 150, 255), stop:0.084833 rgba(255, 255, 255, 255), stop:1 rgba(250, 250, 250, 255));padding:0px; border-radius:4px;border:1px solid #999}
+QToolButton, QLineEdit{background:transparent; border:0px; padding:3px}</string>
+              </property>
+              <property name="frameShape">
+               <enum>QFrame::StyledPanel</enum>
+              </property>
+              <property name="frameShadow">
+               <enum>QFrame::Raised</enum>
+              </property>
+              <layout class="QHBoxLayout" name="horizontalLayout_52">
+               <property name="spacing">
+                <number>0</number>
+               </property>
+               <property name="leftMargin">
+                <number>0</number>
+               </property>
+               <property name="topMargin">
+                <number>0</number>
+               </property>
+               <property name="rightMargin">
+                <number>2</number>
+               </property>
+               <property name="bottomMargin">
+                <number>0</number>
+               </property>
                <item>
                 <widget class="QLineEdit" name="cant">
                  <property name="sizePolicy">
@@ -242,7 +261,7 @@ p, li { white-space: pre-wrap; }
             <string>Punto</string>
            </property>
            <property name="icon">
-            <iconset resource="../icons.qrc">
+            <iconset resource="../../2.3/icons.qrc">
              <normaloff>:/modulos/images/png/elegant/ventas.png</normaloff>:/modulos/images/png/elegant/ventas.png</iconset>
            </property>
            <property name="iconSize">
@@ -278,7 +297,7 @@ p, li { white-space: pre-wrap; }
             <string>...</string>
            </property>
            <property name="icon">
-            <iconset resource="../icons.qrc">
+            <iconset resource="../../2.3/icons.qrc">
              <normaloff>:/actions/images/actions/black_18/resize2.png</normaloff>:/actions/images/actions/black_18/resize2.png</iconset>
            </property>
            <property name="iconSize">
@@ -495,7 +514,7 @@ p, li { white-space: pre-wrap; }
                           <string>Seleccionar un cliente</string>
                          </property>
                          <property name="icon">
-                          <iconset resource="../icons.qrc">
+                          <iconset resource="../../2.3/icons.qrc">
                            <normaloff>:/actions/images/actions/black_18/administrator.png</normaloff>:/actions/images/actions/black_18/administrator.png</iconset>
                          </property>
                          <property name="iconSize">
@@ -571,6 +590,24 @@ p, li { white-space: pre-wrap; }
                          </property>
                          <property name="textFormat">
                           <enum>Qt::RichText</enum>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <widget class="QLabel" name="lblModo">
+                         <property name="sizePolicy">
+                          <sizepolicy hsizetype="Preferred" vsizetype="Fixed">
+                           <horstretch>0</horstretch>
+                           <verstretch>0</verstretch>
+                          </sizepolicy>
+                         </property>
+                         <property name="font">
+                          <font>
+                           <pointsize>9</pointsize>
+                          </font>
+                         </property>
+                         <property name="text">
+                          <string>Ingreso manual</string>
                          </property>
                         </widget>
                        </item>
@@ -848,14 +885,6 @@ p, li { white-space: pre-wrap; }
                    <property name="contextMenuPolicy">
                     <enum>Qt::ActionsContextMenu</enum>
                    </property>
-                   <property name="toolTip">
-                    <string>&lt;!DOCTYPE HTML PUBLIC &quot;-//W3C//DTD HTML 4.0//EN&quot; &quot;http://www.w3.org/TR/REC-html40/strict.dtd&quot;&gt;
-&lt;html&gt;&lt;head&gt;&lt;meta name=&quot;qrichtext&quot; content=&quot;1&quot; /&gt;&lt;style type=&quot;text/css&quot;&gt;
-p, li { white-space: pre-wrap; }
-&lt;/style&gt;&lt;/head&gt;&lt;body style=&quot; font-family:'Sans'; font-size:10pt; font-weight:400; font-style:normal;&quot;&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;* Para quitar un producto de la lista:&lt;/span&gt;&lt;br /&gt;	1) Seleccione el articulo&lt;br /&gt;	2) Presione &quot;Eliminar&quot; o &quot;Del&quot;&lt;/p&gt;
-&lt;p style=&quot; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;&quot;&gt;&lt;br /&gt;&lt;span style=&quot; font-weight:600;&quot;&gt;* Para limpiar toda la venta:&lt;/span&gt;	&lt;br /&gt;	a) Presione &quot;Control&quot; y &quot;N&quot;&lt;br /&gt;	b)O ir a &quot;Archivo&amp;gt;Nueva nota&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
-                   </property>
                    <property name="editTriggers">
                     <set>QAbstractItemView::NoEditTriggers</set>
                    </property>
@@ -923,7 +952,7 @@ p, li { white-space: pre-wrap; }
             <string>Cancelar</string>
            </property>
            <property name="icon">
-            <iconset resource="../icons.qrc">
+            <iconset resource="../../2.3/icons.qrc">
              <normaloff>:/actions/images/actions/black_18/trash_can.png</normaloff>:/actions/images/actions/black_18/trash_can.png</iconset>
            </property>
            <property name="iconSize">
@@ -946,7 +975,7 @@ p, li { white-space: pre-wrap; }
             <string>Abrir</string>
            </property>
            <property name="icon">
-            <iconset resource="../icons.qrc">
+            <iconset resource="../../2.3/icons.qrc">
              <normaloff>:/actions/images/actions/black_18/file.png</normaloff>:/actions/images/actions/black_18/file.png</iconset>
            </property>
            <property name="iconSize">
@@ -969,7 +998,7 @@ p, li { white-space: pre-wrap; }
             <string>Guardar</string>
            </property>
            <property name="icon">
-            <iconset resource="../icons.qrc">
+            <iconset resource="../../2.3/icons.qrc">
              <normaloff>:/actions/images/actions/black_18/diskette.png</normaloff>:/actions/images/actions/black_18/diskette.png</iconset>
            </property>
            <property name="iconSize">
@@ -992,7 +1021,7 @@ p, li { white-space: pre-wrap; }
             <string>Exportar</string>
            </property>
            <property name="icon">
-            <iconset resource="../icons.qrc">
+            <iconset resource="../../2.3/icons.qrc">
              <normaloff>:/actions/images/actions/black_18/clip.png</normaloff>:/actions/images/actions/black_18/clip.png</iconset>
            </property>
            <property name="iconSize">
@@ -1022,7 +1051,7 @@ p, li { white-space: pre-wrap; }
             <string>Completar</string>
            </property>
            <property name="icon">
-            <iconset resource="../icons.qrc">
+            <iconset resource="../../2.3/icons.qrc">
              <normaloff>:/actions/images/actions/color_18/thunder.png</normaloff>:/actions/images/actions/color_18/thunder.png</iconset>
            </property>
            <property name="iconSize">
@@ -1141,7 +1170,7 @@ p, li { white-space: pre-wrap; }
   </widget>
   <action name="actionNueva">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/add.png</normaloff>:/actions/images/actions/black_18/add.png</iconset>
    </property>
    <property name="text">
@@ -1156,7 +1185,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionImprimir">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/print.png</normaloff>:/actions/images/actions/black_18/print.png</iconset>
    </property>
    <property name="text">
@@ -1210,7 +1239,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="aGuardar">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/diskette.png</normaloff>:/actions/images/actions/black_18/diskette.png</iconset>
    </property>
    <property name="text">
@@ -1225,7 +1254,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionOpen">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/file.png</normaloff>:/actions/images/actions/black_18/file.png</iconset>
    </property>
    <property name="text">
@@ -1336,7 +1365,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionGuardar">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/hard_disk.png</normaloff>:/actions/images/actions/black_18/hard_disk.png</iconset>
    </property>
    <property name="text">
@@ -1359,7 +1388,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionReimprimir">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset>
      <normaloff>:/actions/images/actions/gray_18/print.png</normaloff>:/actions/images/actions/gray_18/print.png</iconset>
    </property>
    <property name="text">
@@ -1373,7 +1402,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionCancelar_nota">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/cancel.png</normaloff>:/actions/images/actions/black_18/cancel.png</iconset>
    </property>
    <property name="text">
@@ -1394,7 +1423,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionQuitar_prod">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/delete.png</normaloff>:/actions/images/actions/black_18/delete.png</iconset>
    </property>
    <property name="text">
@@ -1433,7 +1462,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionCerrar_nota">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/checkmark2.png</normaloff>:/actions/images/actions/black_18/checkmark2.png</iconset>
    </property>
    <property name="text">
@@ -1464,7 +1493,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="aAbrir">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/file.png</normaloff>:/actions/images/actions/black_18/file.png</iconset>
    </property>
    <property name="text">
@@ -1503,7 +1532,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionIngresar">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/add.png</normaloff>:/actions/images/actions/black_18/add.png</iconset>
    </property>
    <property name="text">
@@ -1518,7 +1547,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionFacturar">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/list.png</normaloff>:/actions/images/actions/black_18/list.png</iconset>
    </property>
    <property name="text">
@@ -1550,7 +1579,7 @@ p, li { white-space: pre-wrap; }
     <bool>true</bool>
    </property>
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/fast_forward.png</normaloff>:/actions/images/actions/black_18/fast_forward.png</iconset>
    </property>
    <property name="text">
@@ -1562,7 +1591,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionPresupuesto">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/document.png</normaloff>:/actions/images/actions/black_18/document.png</iconset>
    </property>
    <property name="text">
@@ -1574,7 +1603,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionAutorizar_descuento">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/key.png</normaloff>:/actions/images/actions/black_18/key.png</iconset>
    </property>
    <property name="text">
@@ -1586,7 +1615,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionAbrir_cajon">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/bell.png</normaloff>:/actions/images/actions/black_18/bell.png</iconset>
    </property>
    <property name="text">
@@ -1601,7 +1630,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionCambiar_usuario">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/group.png</normaloff>:/actions/images/actions/black_18/group.png</iconset>
    </property>
    <property name="text">
@@ -1613,7 +1642,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionNueva_sesion">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/administrator.png</normaloff>:/actions/images/actions/black_18/administrator.png</iconset>
    </property>
    <property name="text">
@@ -1625,7 +1654,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionCerrar_sesion">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/disconnect.png</normaloff>:/actions/images/actions/black_18/disconnect.png</iconset>
    </property>
    <property name="text">
@@ -1637,7 +1666,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="aConfigBd">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/spreadsheet.png</normaloff>:/actions/images/actions/black_18/spreadsheet.png</iconset>
    </property>
    <property name="text">
@@ -1646,7 +1675,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionGuardarcompra">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/download2.png</normaloff>:/actions/images/actions/black_18/download2.png</iconset>
    </property>
    <property name="text">
@@ -1661,7 +1690,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionAbrir_compra">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/file.png</normaloff>:/actions/images/actions/black_18/file.png</iconset>
    </property>
    <property name="text">
@@ -1673,7 +1702,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionNueva_compra">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/add.png</normaloff>:/actions/images/actions/black_18/add.png</iconset>
    </property>
    <property name="text">
@@ -1685,7 +1714,7 @@ p, li { white-space: pre-wrap; }
   </action>
   <action name="actionSwap">
    <property name="icon">
-    <iconset resource="../icons.qrc">
+    <iconset resource="../../2.3/icons.qrc">
      <normaloff>:/actions/images/actions/black_18/arrow_bidirectional.png</normaloff>:/actions/images/actions/black_18/arrow_bidirectional.png</iconset>
    </property>
    <property name="text">
@@ -1706,7 +1735,6 @@ p, li { white-space: pre-wrap; }
  <tabstops>
   <tabstop>codigo</tabstop>
   <tabstop>lista2</tabstop>
-  <tabstop>cant</tabstop>
   <tabstop>bventa</tabstop>
   <tabstop>tbFull</tabstop>
   <tabstop>tabla</tabstop>
@@ -1721,7 +1749,7 @@ p, li { white-space: pre-wrap; }
   <tabstop>dsbPrecio</tabstop>
  </tabstops>
  <resources>
-  <include location="../icons.qrc"/>
+  <include location="../../2.3/icons.qrc"/>
  </resources>
  <connections>
   <connection>
